--- a/package.json
+++ b/package.json
@@ -13,8 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.0.4",
     "@truffle/hdwallet-provider": "^2.0.0",
+    "@walletconnect/ethereum-provider": "^1.7.4",
+    "@web3-react/core": "8.0.18-beta.0",
+    "@web3-react/eip1193": "8.0.13-beta.0",
+    "@web3-react/empty": "8.0.10-beta.0",
+    "@web3-react/metamask": "8.0.14-beta.0",
+    "@web3-react/network": "8.0.14-beta.0",
+    "@web3-react/types": "8.0.10-beta.0",
+    "@web3-react/url": "8.0.13-beta.0",
+    "@web3-react/walletconnect": "8.0.21-beta.0",
+    "@web3-react/walletlink": "8.0.20-beta.0",
     "dotenv": "^12.0.4",
+    "ethers": "^5.6.0",
     "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.4",
@@ -38,5 +50,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "typescript": "^4.5.4"
+  },
+  "resolutions": {
+    "@ethersproject/bignumber": "5.5.0",
+    "@ethersproject/experimental": "5.5.0",
+    "@ethersproject/providers": "5.5.0",
+    "@ethersproject/units": "5.5.0"
   }
 }
